email-plugin/openshift/deployment.yaml
---
apiVersion: apps/v1
kind: Deployment
metadata:
  labels:
    app.kubernetes.io/name: email-plugin
  name: email-plugin
spec:
  replicas: 1
  selector:
    matchLabels:
      app: email-plugin
  template:
    metadata:
      labels:
        app: email-plugin
        app.kubernetes.io/name: email-plugin
    spec:
      containers:
        - name: server
          image: image-registry.openshift-image-registry.svc:5000/aap/email-plugin:latest
          imagePullPolicy: Always
          ports:
            - containerPort: 8080
              name: http
          readinessProbe:
            httpGet:
              path: /healthz
              port: http
            initialDelaySeconds: 5
            periodSeconds: 10
          livenessProbe:
            httpGet:
              path: /healthz
              port: http
            initialDelaySeconds: 30
            periodSeconds: 30
          resources:
            requests:
              cpu: 50m
              memory: 128Mi
            limits:
              cpu: "1"
              memory: 512Mi
