email-plugin/openshift/service.yaml
---
apiVersion: v1
kind: Service
metadata:
  labels:
    app.kubernetes.io/name: email-plugin
  name: email-plugin
spec:
  selector:
    app: email-plugin
  ports:
    - name: http
      port: 8080
      targetPort: 8080
