email-plugin/openshift/route.yaml
---
apiVersion: route.openshift.io/v1
kind: Route
metadata:
  labels:
    app.kubernetes.io/name: email-plugin
  name: email-plugin
spec:
  to:
    kind: Service
    name: email-plugin
    weight: 100
  port:
    targetPort: http
  tls:
    termination: edge
